2008-10-01  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/Makefile.am: added hildon-touch-selector-column.h

2008-10-01  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/hildon-touch-selector.c: added the property "text-column" to the
	class HildonTouchSelectorColumn, and related get/set functions
	(_default_printf_func): updated to use "text-column" property
	* src/hildon-touch-selector-entry.c: mark as deprecated the property
	"text-column" in his documentation, as this is now included on
	HildonTouchSelectorColumn. The get/set_property can still be used,
	working as a wrapper to the concrete column "text-column" property
	(_text_column_modified): callback added in order to handle the signal
	"notify::text-column" of the concrete HildonTouchSelectorColumn
	(hildon_touch_selector_entry_get_text_column)
	(hildon_touch_selector_entry_set_text_column): Added documentation, and
	modified in order to use the HildonTouchSelectorColumn "text-column"
	property
	* src/hildon-time-selector.c:
	* src/hildon-date-selector.c:
	* examples/hildon-touch-selector-example.c
	* examples/hildon-touch-selector-multi-cells-example.c
	* examples/hildon-picker-button-multicolumn-example.c
	Set the right value to "text-column" property on the creation of a new
	column using hildon_touch_selector_append_column()

	Fixes: NB#88644 (Hardcoded first column of the model as text column)

2008-09-30  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c
	(hildon_app_menu_construct_child, hildon_app_menu_init): When
	updating the layout of the menu, don't create all widgets again,
	just repack the items in their new places.

2008-09-30  Alejandro Pinheiro <apinheiro@igalia.com>

 	* src/hildon-time-selector.c
 	(hildon_time_selector_get_time)
 	(hildon_time_selector_set_time)
 	Added documentation of these public methods

	* src/hildon-date-button.h
	* src/hildon-touch-selector-column.h
	* src/hildon-time-button.h
	* src/hildon-picker-dialog.h
	* src/hildon-time-selector.h